--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,14 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
+file.reference.commons-lang3-3.3.2.jar=lib/commons-lang3-3.3.2.jar
+file.reference.jcommander-1.35.jar=lib/jcommander-1.35.jar
+# \u53ef\u4ee5\u9009\u62e9\u8986\u76d6\u9ed8\u8ba4\u7684\u4ee3\u7801\u5e93\u6e05\u5355\u5c5e\u6027, \u7528\u4e8e\u9632\u6b62 RIA \u88ab\u7528\u4f5c\u5176\u4ed6\u7528\u9014
+manifest.custom.codebase=
+# \u53ef\u4ee5\u9009\u62e9\u8986\u76d6\u9ed8\u8ba4\u7684\u6743\u9650\u6e05\u5355\u5c5e\u6027 (\u652f\u6301\u7684\u503c: sandbox, all-permissions)
+manifest.custom.permissions=
 project.ioutils=lib/ioutils
 project.license=public-domain
 application.title=disunity
@@ -34,14 +42,14 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.Apache_Commons_IO_2.4.classpath}:\
-    ${libs.Apache_Commons_Lang3_3.1.classpath}:\
-    ${libs.jcommander-1.35.classpath}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-lang3-3.3.2.jar}:\
+    ${file.reference.jcommander-1.35.jar}:\
     ${reference.ioutils.jar}:\
     ${reference.lzmajio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
